--- a/templates/users.html
+++ b/templates/users.html
@@ -6,7 +6,7 @@
     <div class="parallax"><img src="/static/images/pup_deck.jpg"></div>
 </div>
 <div class="section white">
-    <div class="row container">
+    <div class="container">
     {% if session['is_staff'] != 'is_staff' %}
         <div class="col s12">
             <p class="heading-text">Oops! This area is for staff only.</p>
