Updated adoption form to make it invisible for non users

--- a/templates/forms/dogs/adopt-dog.html
+++ b/templates/forms/dogs/adopt-dog.html
@@ -21,8 +21,8 @@
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="user_description" class="materialize-textarea"></textarea>
-                <label for="user_description">Tell us a little about why you want this dog</label>
+                <textarea name="why_adopt" class="materialize-textarea"></textarea>
+                <label for="why_adopt">Tell us a little about why you want this dog</label>
             </div>
         </div>
         <div class="row">
