--- a/templates/requests.html
+++ b/templates/requests.html
@@ -6,54 +6,48 @@
 </div>
 <div class="section white">
     <div class="container">
-    <!-- {% if adoption == 'form sent' %}
+    {% if session['is_staff'] != 'is_staff' %}
         <div class="col s12">
-            <p class="heading-text">Thank you"</p>
-            <p class="secondary-text">Thanks for considering adoption! We'll get back to you soon!</p>
+            <p class="heading-text">Oops! This area is for staff only.</p>
+            <p class="secondary-text">Not to worry! Click on the button below and we will bring you back home.</p>
+            <a href="{{url_for('user_home')}}" class="waves-effect waves-light btn card-action-button">
+                <i class="material-icons right card-action-button-icon">home</i>
+                <span>Bring me back home</span>
+            </a>
+
         </div>
-    {% endif %} -->
+    {% endif %}
+    {% if session['is_staff'] == 'is_staff' %}
         <div class="row card-row-find">
-            {% for dog in dogs %}
+            {% for request in requests %}
                 <div class="row card card-item-row">
+                    <div class="col s12 m5">
+                        <p class="card-title">Adoptant</p>
+                        <p>{{request.first_name}} {{request.last_name}}</p>
+                        <p>{{request._email}}</p>
+                        <p>{{request.why_adopt}}</p>
+                    </div>
                     <div class="col s12 m3">
-                        <p class="card-title">{{dog.dog_name}}</p>
-                        <div class="card-image">
-                            <i class="material-icons card-icon">pets</i>
-                        </div>
-                        <p class="card-breed">{{dog.dog_breed}}</p>
-                    </div>
-                    <div class="col s12 m2 card-buttons-row">
-                        <a id="{{dog._id}}" value="adopt" class="waves-effect waves-light btn card-action-button form-trigger">
-                            <i class="material-icons right card-action-button-icon">favorite</i>
-                            <span>Adopt</span>
-                        </a>
-                        {% if session['is_staff'] == 'is_staff' %}
-                        <a id="{{dog._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger">
-                            <i class="material-icons right card-action-button-icon">edit</i>
-                            <span>Edit</span>
-                        </a>
-                        <a id="{{dog._id}}" value="delete" class="waves-effect waves-light btn card-action-button form-trigger">
-                            <i class="material-icons right card-action-button-icon">delete</i>
-                            <span>Delete</span>
-                        </a>
-                        {% endif %}
-                    </div>
-                    <div class="col s12 m7">
                         <div class="card-content">
-                            <p class="card-content-title">Description</p>
-                            <p class="truncate">{{dog.dog_description}}</p>
+                            <p class="card-title">Dog</p>
+                            <p>{{request.dog_name}}</p>
+                            <p>{{request.dog_breed}}</p>
                         </div>
+                    </div>
+                    <div class="col s12 m4 card-buttons-row">
+                        <a id="{{request._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger">
+                            <i class="material-icons right card-action-button-icon">clear</i>
+                            <span>Not Adopted</span>
+                        </a>
+                        <a id="{{request._id}}" value="delete" class="waves-effect waves-light btn card-action-button form-trigger">
+                            <i class="material-icons right card-action-button-icon">done</i>
+                            <span>Adopted</span>
+                        </a>
                     </div>
                 </div>
-                {% if session['is_staff'] %}
-                    {% include 'forms/dogs/adopt-dog.html' %}
-                {% endif %}
-                {% if session['is_staff'] == 'is_staff' %}
-                    {% include 'forms/dogs/edit-dog.html' %}
-                    {% include 'forms/dogs/delete-dog.html' %}
-                {% endif %}
             {% endfor %}
         </div>
+    {% endif %}
     </div>
 </div>  
 
