--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -6,30 +6,23 @@
                 <ul id="nav-mobile" class="hide-on-med-and-down">
                     <li><a href="{{url_for('user_home')}}">Home</a></li>
                     <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
-                    {% if session['is_staff'] == 'is_staff' %}
-                    <li><a href="{{url_for('get_users')}}">Users</a></li>
-                    {% endif %}
                     <li><a href="{{url_for('get_services')}}">Services</a></li>
-                    <li><a href="{{url_for('get_stores')}}">Stores</a></li>                
+                    <li><a href="{{url_for('get_stores')}}">Stores</a></li> 
+            
                 </ul>
                 <ul class="side-nav" id="mobile-menu">
                     <li><a href="{{url_for('user_home')}}">Home</a></li>
                     <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
-                    {% if session['is_staff'] == 'is_staff' %}
-                    <li><a href="{{url_for('get_users')}}">Users</a></li>
-                    {% endif %}
                     <li><a href="{{url_for('get_services')}}">Services</a></li>
                     <li><a href="{{url_for('get_stores')}}">Stores</a></li> 
+
                     <div class="row register-box show-on-small-only">
                         {% if not session %}
                             <a href="{{url_for('register')}}" class="col s12 btn waves-effect general-text nav-action-button">Register</a>
                             <a href="{{url_for('user_login')}}" class="col s12 btn waves-effect general-text nav-action-button">Login</a>
                         {% endif %}
-                        {% if session['is_staff'] == 'is_staff' %}
-                            <a href="{{url_for('register')}}" class="col s12 btn waves-effect general-text nav-action-button">Register</a>
-                            <a href="{{url_for('user_logout')}}" class="col s12 btn waves-effect general-text nav-action-button">Logout</a>
-                        {% endif %}
-                        {% if session['is_staff'] == 'not_staff' %}     
+
+                        {% if session['is_staff'] %}     
                             <a href="{{url_for('get_dashboard')}}" class="col s12 btn waves-effect general-text nav-action-button">Dashboard</a>
                             <a href="{{url_for('user_logout')}}" class="col s12 btn waves-effect general-text nav-action-button">Logout</a>
                         {% endif %}
@@ -51,11 +44,7 @@
                 <a href="{{url_for('register')}}" class="btn waves-effect general-text nav-action-button">Register</a>
                 <a href="{{url_for('user_login')}}" class="btn waves-effect general-text nav-action-button">Login</a>
             {% endif %}
-            {% if session['is_staff'] == 'is_staff' %}
-                <a href="{{url_for('register')}}" class="btn waves-effect general-text nav-action-button">Register</a>
-                <a href="{{url_for('user_logout')}}" class="btn waves-effect general-text nav-action-button">Logout</a>
-            {% endif %}
-            {% if session['is_staff'] == 'not_staff' %}     
+            {% if session['is_staff'] %}     
                 <a href="{{url_for('get_dashboard')}}" class="btn waves-effect general-text nav-action-button">Dashboard</a>
                 <a href="{{url_for('user_logout')}}" class="btn waves-effect general-text nav-action-button">Logout</a>
             {% endif %}
