--- a/templates/requests.html
+++ b/templates/requests.html
@@ -35,11 +35,11 @@
                         </div>
                     </div>
                     <div class="col s12 m4 card-buttons-row">
-                        <a id="{{request._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger">
+                        <a action="{{ url_for('delete_entry', usr_type='not_adopted', usr_id=request._id) }}" method="POST" id="{{request._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger">
                             <i class="material-icons right card-action-button-icon">clear</i>
                             <span>Not Adopted</span>
                         </a>
-                        <a id="{{request._id}}" value="delete" class="waves-effect waves-light btn card-action-button form-trigger">
+                        <a action="{{ url_for('delete_entry', usr_type='adopted', usr_id=request._id) }}" method="POST" id="{{request._id}}" value="delete" class="waves-effect waves-light btn card-action-button form-trigger">
                             <i class="material-icons right card-action-button-icon">done</i>
                             <span>Adopted</span>
                         </a>
