Updated elements position and text for all dashboard files

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -8,10 +8,10 @@
 <div class="section white">
     <div class="container">
     {% if session['is_staff'] == 'is_staff' %}
-        {% include 'templates/dashboard-staff.html' %}
-    {% endif %}
+        {% include 'dashboard/dash-staff.html' %}
+    {% endif %} 
     {% if session['is_staff'] != 'is_staff' %}
-        {% include 'templates/user-dashboard.html' %}
+        {% include 'dashboard/dash-user.html' %}
     {% endif %} 
     </div>
 </div>  
