--- a/templates/dashboard/dash-staff.html
+++ b/templates/dashboard/dash-staff.html
@@ -3,13 +3,13 @@
         <div class="col s12 m3">
             <p class="card-title">Users</p>
         </div>
-        <div class="col s12 m7">
+        <div class="col s12 m6">
             <div class="card-content">
                 <p class="card-content-title">Description</p>
-                <p class="truncate"> Use to update or delete users</p>
+                <p> Update or delete users</p>
             </div>
         </div>
-        <div class="col s12 m2 buttons-row">
+        <div class="col s12 m3 buttons-row">
             <a href="{{url_for('get_users')}}" class="waves-effect waves-light btn card-action-button form-trigger">
                 <i class="material-icons right card-action-button-icon">edit</i>
                 <span>Users</span>
@@ -20,16 +20,16 @@
         <div class="col s12 m3">
             <p class="card-title">Adoption Requests</p>
         </div>
-        <div class="col s12 m7">
+        <div class="col s12 m6">
             <div class="card-content">
                 <p class="card-content-title">Description</p>
-                <p class="truncate">Update or delete adoption requests</p>
+                <p>Update or delete adoption requests</p>
             </div>
         </div>
-        <div class="col s12 m2 buttons-row">
+        <div class="col s12 m3 buttons-row">
             <a href="{{url_for('get_adopt_requests')}}" class="waves-effect waves-light btn card-action-button form-trigger">
                 <i class="material-icons right card-action-button-icon">edit</i>
-                <span>Users</span>
+                <span>Adoptions</span>
             </a>
         </div>
     </div>
@@ -37,13 +37,13 @@
         <div class="col s12 m3">
             <p class="card-title">Create new register</p>
         </div>
-        <div class="col s12 m7">
+        <div class="col s12 m6">
             <div class="card-content">
                 <p class="card-content-title">Description</p>
                 <p class="truncate">Add new dog or user</p>
             </div>
         </div>
-        <div class="col s12 m2 buttons-row">
+        <div class="col s12 m3 buttons-row">
             <a href="{{url_for('register')}}" class="waves-effect waves-light btn card-action-button form-trigger">
                 <i class="material-icons right card-action-button-icon">edit</i>
                 <span>Register</span>
