Added fields to forms and changed layout on templates

--- a/templates/forms/services/edit-service.html
+++ b/templates/forms/services/edit-service.html
@@ -2,47 +2,55 @@
     <form action="{{ url_for('update_entry', usr_type='services', usr_id=service._id) }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s6">
-                <input name="first_name" type="text" class="validate">
-                <label for="first_name">First Name</label>
+                <input name="service_first_name" type="text" class="validate" required>
+                <label for="service_first_name">First Name</label>
             </div>
             <div class="input-field col s6">
-                <input name="last_name" type="text" class="validate">
-                <label for="last_name">Last Name</label>
+                <input name="service_last_name" type="text" class="validate" required>
+                <label for="service_last_name">Last Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="_email" type="email" class="validate">
+                <input name="_email" type="email" class="validate" required>
                 <label for="_email">Email</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="password" type="password" class="validate">
+                <input name="password" type="password" class="validate" required>
                 <label for="password">Password</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="type_of_service" type="text" class="validate">
-                <label for="first_name">Type of Service</label>
+                <input name="type_of_service" type="text" class="validate" required>
+                <label for="first_name">Type of service</label>
+            </div>
+            <div class="input-field col s6">
+                <input name="aff_link" type="text" class="validate">
+                <label for="aff_link">website</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s6">
+                <input name="discount_code" type="text" class="validate">
+                <label for="discount_code">Discount Code</label>
+            </div>
+            <div class="input-field col s6">
+                <input name="discount_amount" type="text" class="validate">
+                <label for="discount_amount">Discount Amount</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="service_description" class="materialize-textarea"></textarea>
-                <label for="service_description">Service Description</label>
+                <textarea name="service_description" class="materialize-textarea" required></textarea>
+                <label for="service_description">Short description</label>
             </div>
         </div>
         <div class="row">
-            <div class="input-field col s12">
-                <input name="_email" type="email" class="validate">
-                <label for="_email">{{service._email}}</label>
-            </div>
-        </div>
-        <div class="row">
-            <button class="btn waves-effect waves-light" type="submit">Update Service
-                <i class="material-icons right">edit</i>
+            <button class="btn waves-effect waves-light" type="submit">Create Account
+                <i class="material-icons right">playlist_add</i>
             </button>
         </div>
     </form>
