--- a/templates/forms/stores/edit-store.html
+++ b/templates/forms/stores/edit-store.html
@@ -1,19 +1,25 @@
 <div class="form-box hide" id="{{ store._id }}" value="edit">
     <form action="{{ url_for('update_entry', usr_type='stores', usr_id=store._id) }}" method="POST" class="col s12">
         <div class="row">
-            <div class="input-field col s12">
+            <div class="input-field col s6">
                 <input name="store_name" type="text" class="validate">
                 <label for="store_name">Store Name</label>
-            </div>
-            <div class="input-field col s6">
-                <input name="store_address" type="text" class="validate">
-                <label for="store_addres">Store Address</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
+                <textarea name="store_description" class="materialize-textarea"></textarea>
+                <label for="store_description">Address</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s6">
                 <input name="_email" type="email" class="validate">
-        <label for="_email">Email</label>
+                <label for="_email">Email</label>
+            </div>
+            <div class="input-field col s6">
+                <input name="aff_link" type="text" class="validate">
+                <label for="aff_link">website</label>
             </div>
         </div>
         <div class="row">
@@ -25,12 +31,22 @@
         <div class="row">
             <div class="input-field col s12">
                 <textarea name="store_description" class="materialize-textarea"></textarea>
-                <label for="store_description">Store Description</label>
+                <label for="store_description">Short description</label>
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit">Update Account
-                <i class="material-icons right">edit</i>
+            <div class="input-field col s6">
+                <input name="discount_code" type="text" class="validate">
+                <label for="discount_code">Discount Code</label>
+            </div>
+            <div class="input-field col s6">
+                <input name="discount_amount" type="text" class="validate">
+                <label for="discount_amount">Discount Amount</label>
+            </div>
+        </div>
+        <div class="row">
+            <button class="btn waves-effect waves-light" type="submit">Create Account
+                <i class="material-icons right">playlist_add</i>
             </button>
         </div>
     </form>
