--- a/templates/forms/users/register-user.html
+++ b/templates/forms/users/register-user.html
@@ -6,20 +6,20 @@
                 <label for="first_name">First Name</label>
             </div>
             <div class="input-field col s6">
-                <input name="last_name" type="text" class="validate">
+                <input name="last_name" type="text" class="validate" required> 
                 <label for="last_name">Last Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="password" type="password" class="validate">
-                <label for="password">Password</label>
+                <input name="_email" type="email" class="validate" required> 
+                <label for="_email">Email</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="_email" type="email" class="validate">
-                <label for="_email">Email</label>
+                <input name="password" type="password" class="validate" required>
+                <label for="password">Password</label>
             </div>
         </div>
         {% if session['is_staff'] %}
