--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 {% block content %}
 <div class="parallax-container">
@@ -6,50 +5,65 @@
 </div>
 <div class="section white">
     <div class="container">
+        <div class="container">
+            <h2 class="heading-text">Pawer Dogs</h2>
+            <p class="secondary-text">Looking for a new doggy friend to adopt? We have an incredible number of dogs
+                looking for a forever home!</p>
+            <p>Have a look below and choose the one you want to adopt. Our team will get back to you as soon as possible
+                to talk about the adoption process and to help you to accomodate your new best friend to its new home!
+            </p>
+            <p>Only registered and logged in users are able to apply for adoption.</p>
+            <p>If you are registered, <a href="{{url_for('user_login')}}">login here</a>! If you aren't registered yet,
+                <a href="{{url_for('register')}}">register here</a> and get amazing discounts in products and
+                services!</p>
+        </div>
         <div class="row card-row-find">
             {% for dog in dogs %}
-                <div class="row card card-item-row">
-                    <div class="col s12 m3">
-                        <p class="card-title">{{dog.dog_name}}</p>
-                        <div class="card-image">
-                            <i class="material-icons card-icon">pets</i>
-                        </div>
-                        <p class="card-breed">{{dog.dog_breed}}</p>
+            <div class="row card card-item-row">
+                <div class="col s12 m3">
+                    <p class="card-title">{{dog.dog_name}}</p>
+                    <div class="card-image">
+                        <i class="material-icons card-icon">pets</i>
                     </div>
-                    <div class="col s12 m6">
-                        <div class="card-content">
-                            <p class="card-content-title">Description</p>
-                            <p class="truncate">{{dog.dog_description}}</p>
-                        </div>
-                    </div>
-                    <div class="col s12 m3 card-buttons-row">
-                        <a id="{{dog._id}}" value="adopt" class="waves-effect waves-light btn card-action-button form-trigger">
-                            <i class="material-icons right card-action-button-icon">favorite</i>
-                            <span>Adopt</span>
-                        </a>
-                        {% if session['is_staff'] == 'is_staff' %}
-                        <a id="{{dog._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger">
-                            <i class="material-icons right card-action-button-icon">edit</i>
-                            <span>Edit</span>
-                        </a>
-                        <a id="{{dog._id}}" value="delete" class="waves-effect waves-light btn card-action-button form-trigger">
-                            <i class="material-icons right card-action-button-icon">delete</i>
-                            <span>Delete</span>
-                        </a>
-                        {% endif %}
+                    <p class="card-breed">{{dog.dog_breed}}</p>
+                </div>
+                <div class="col s12 m6">
+                    <div class="card-content">
+                        <p class="card-content-title">Description</p>
+                        <p class="truncate">{{dog.dog_description}}</p>
                     </div>
                 </div>
-                
-                {% if session %}
-                    {% include 'forms/dogs/adopt-dog.html' %}
-                {% endif %}
-                {% if session['is_staff'] == 'is_staff' %}
-                    {% include 'forms/dogs/edit-dog.html' %}
-                    {% include 'forms/dogs/delete-dog.html' %}
-                {% endif %}
+                <div class="col s12 m3 card-buttons-row">
+                    <a id="{{dog._id}}" value="adopt"
+                        class="waves-effect waves-light btn card-action-button form-trigger">
+                        <i class="material-icons right card-action-button-icon">favorite</i>
+                        <span>Adopt</span>
+                    </a>
+                    {% if session['is_staff'] == 'is_staff' %}
+                    <a id="{{dog._id}}" value="edit"
+                        class="waves-effect waves-light btn card-action-button form-trigger">
+                        <i class="material-icons right card-action-button-icon">edit</i>
+                        <span>Edit</span>
+                    </a>
+                    <a id="{{dog._id}}" value="delete"
+                        class="waves-effect waves-light btn card-action-button form-trigger">
+                        <i class="material-icons right card-action-button-icon">delete</i>
+                        <span>Delete</span>
+                    </a>
+                    {% endif %}
+                </div>
+            </div>
+
+            {% if session %}
+            {% include 'forms/dogs/adopt-dog.html' %}
+            {% endif %}
+            {% if session['is_staff'] == 'is_staff' %}
+            {% include 'forms/dogs/edit-dog.html' %}
+            {% include 'forms/dogs/delete-dog.html' %}
+            {% endif %}
             {% endfor %}
         </div>
     </div>
-</div>  
+</div>
 
 {% endblock %}
