--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -16,7 +16,7 @@
                     <li><a href="{{url_for('get_services')}}">Services</a></li>
                     <li><a href="{{url_for('get_stores')}}">Stores</a></li> 
 
-                    <div class="row register-box show-on-small-only">
+                    <div class="row register-box show-on-medium-and-down">
                         {% if not session %}
                             <a href="{{url_for('register')}}" class="col s12 btn waves-effect general-text nav-action-button">Register</a>
                             <a href="{{url_for('user_login')}}" class="col s12 btn waves-effect general-text nav-action-button">Login</a>
@@ -39,7 +39,7 @@
                     <p>|STORES</p>
                 </div>
             </div>
-            <div class="col s4 register-box hide-on-small-only">
+            <div class="col s4 register-box hide-on-med-and-down">
              {% if not session %}
                 <a href="{{url_for('register')}}" class="btn waves-effect general-text nav-action-button">Register</a>
                 <a href="{{url_for('user_login')}}" class="btn waves-effect general-text nav-action-button">Login</a>
