Updated style files after reconfiguration

--- a/static/sass/base/_presets.scss
+++ b/static/sass/base/_presets.scss
@@ -16,6 +16,7 @@ a {
 .parallax-container {
     top: 5.5rem;
     width: 100%;
+    max-height: 70vh;
 }
 .parallax-container .parallax img {
     max-width: 300%;
