--- a/templates/forms/services/register-service.html
+++ b/templates/forms/services/register-service.html
@@ -2,49 +2,49 @@
     <form action="{{ url_for('add_entry', usr_type='services') }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s6">
-                <input name="service_first_name" type="text" class="validate" required>
+                <input name="service_first_name" type="text" class="validate" data-length="40" required>
                 <label for="service_first_name">First Name</label>
             </div>
             <div class="input-field col s6">
-                <input name="service_last_name" type="text" class="validate" required>
+                <input name="service_last_name" type="text" class="validate" data-length="40" required>
                 <label for="service_last_name">Last Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="_email" type="email" class="validate" required>
+                <input name="_email" type="email" class="validate" data-length="40" required>
                 <label for="_email">Email</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="password" type="password" class="validate" required>
+                <input name="password" type="password" class="validate" data-length="40" required>
                 <label for="password">Password</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="type_of_service" type="text" class="validate" required>
+                <input name="type_of_service" type="text" class="validate" data-length="40" required>
                 <label for="first_name">Type of service</label>
             </div>
             <div class="input-field col s6">
-                <input name="aff_link" type="text" class="validate">
+                <input name="aff_link" type="text" class="validate" data-length="40">
                 <label for="aff_link">website</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="discount_code" type="text" class="validate">
+                <input name="discount_code" type="text" class="validate" data-length="40">
                 <label for="discount_code">Discount Code</label>
             </div>
             <div class="input-field col s6">
-                <input name="discount_amount" type="text" class="validate">
+                <input name="discount_amount" type="text" class="validate" data-length="40">
                 <label for="discount_amount">Discount Amount</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="service_description" class="materialize-textarea" required></textarea>
+                <textarea name="service_description" class="materialize-textarea" data-length="400" required></textarea>
                 <label for="service_description">Short description</label>
             </div>
         </div>
