--- a/templates/forms/dogs/edit-dog.html
+++ b/templates/forms/dogs/edit-dog.html
@@ -1,18 +1,18 @@
-<div class="form-box hide" id="{{dog._id}}" value='adopt'>
+<div class="form-box hide" id="{{dog._id}}" value='edit'>
     <form action="{{ url_for('update_entry', usr_type='dogs', usr_id=dog._id) }}" method="POST" class="col s12 edit-dog-form">
         <div class="row">
             <div class="input-field col s6">
-                <input name="dog_name" type="text" class="validate">
+                <input name="dog_name" type="text" class="validate" data-length="30">
                 <label for="dog_name">Dog Name</label>
             </div>
             <div class="input-field col s6">
-                <input name="dog_breed" type="text" class="validate">
+                <input name="dog_breed" type="text" class="validate" data-length="30">
                 <label for="dog_breed">Dog Breed</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="dog_description" class="materialize-textarea"></textarea>
+                <textarea name="dog_description" class="materialize-textarea" data-length="300"></textarea>
                 <label for="icon_telephone">Description</label>
             </div>
         </div>
