--- a/templates/forms/stores/edit-store.html
+++ b/templates/forms/stores/edit-store.html
@@ -2,45 +2,45 @@
     <form action="{{ url_for('update_entry', usr_type='stores', usr_id=store._id) }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s6">
-                <input name="store_name" type="text" class="validate">
+                <input name="store_name" type="text" class="validate" data-length="40">
                 <label for="store_name">Store Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="_email" type="email" class="validate">
+                <input name="_email" type="email" class="validate" data-length="40">
                 <label for="_email">Email</label>
             </div>
             <div class="input-field col s6">
-                <input name="aff_link" type="text" class="validate">
+                <input name="aff_link" type="text" class="validate" data-length="40">
                 <label for="aff_link">website</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="password" type="password" class="validate">
+                <input name="password" type="password" class="validate" data-length="40">
                 <label for="password">Password</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="discount_code" type="text" class="validate">
+                <input name="discount_code" type="text" class="validate" data-length="40">
                 <label for="discount_code">Discount Code</label>
             </div>
             <div class="input-field col s6">
-                <input name="discount_amount" type="text" class="validate">
+                <input name="discount_amount" type="text" class="validate" data-length="40">
                 <label for="discount_amount">Discount Amount</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="store_description" class="materialize-textarea"></textarea>
-                <label for="store_description">Address</label>
+                <textarea name="store_address" class="materialize-textarea" data-length="100"></textarea>
+                <label for="store_address">Address</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="store_description" class="materialize-textarea"></textarea>
+                <textarea name="store_description" class="materialize-textarea" data-length="400"></textarea>
                 <label for="store_description">Short description</label>
             </div>
         </div>
