--- a/templates/forms/stores/feedback-store.html
+++ b/templates/forms/stores/feedback-store.html
@@ -4,13 +4,13 @@
         <div class="row">
             <div class="col s6">
                 <label>
-                    <input class="with-gap" name="fbck" value="positive" type="radio" />
+                    <input class="with-gap" name="feedback-radio" value="positive" type="radio" />
                     <span>Positive</span>
                 </label>
             </div>
             <div class="col s6">
                 <label>
-                    <input class="with-gap" name="fbck" value="negative" type="radio" />
+                    <input class="with-gap" name="feedback-radio" value="negative" type="radio" />
                     <span>Negative</span>
                 </label>
             </div>
