--- a/templates/forms/users/edit-user.html
+++ b/templates/forms/users/edit-user.html
@@ -2,23 +2,23 @@
     <form action="{{ url_for('update_entry', usr_type='users', usr_id=user._id) }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s6">
-                <input name="first_name" type="text" class="validate">
+                <input name="first_name" type="text" class="validate" data-length="40">
                 <label for="first_name">First Name</label>
             </div>
             <div class="input-field col s6">
-                <input name="last_name" type="text" class="validate">
+                <input name="last_name" type="text" class="validate" data-length="40">
                 <label for="last_name">Last Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="_email" type="email" class="validate">
+                <input name="_email" type="email" class="validate" data-length="40">
                 <label for="_email">Email</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="password" type="password" class="validate">
+                <input name="password" type="password" class="validate" data-length="40">
                 <label for="password">Password</label>
             </div>
         </div>
@@ -36,7 +36,7 @@
         {% endif %}
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="user_description" class="materialize-textarea"></textarea>
+                <textarea name="user_description" class="materialize-textarea" data-length="400"></textarea>
                 <label for="user_description">Bio</label>
             </div>
         </div>
