--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -7,18 +7,19 @@
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-	<link rel="stylesheet" href="{{url_for('static', filename='sass/main.css')}}" type="text/css" />
+	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
+    <!-- <link rel="stylesheet" href="{{url_for('static', filename='css/style.min.css')}}" type="text/css" /> -->
 	<title>PAWER</title>
 </head>
 
 <body>
-    {% include 'components/header.html' %}
+    {% include 'layout/header.html' %}
     <main>
         {% block content %}
 
         {% endblock %}
     </main>
-    {% include 'components/footer.html' %}
+    {% include 'layout/footer.html' %}
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="static/js/script.js"></script>
