--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,9 +1,13 @@
-{% extends 'base.html' %}
+{% extends 'layout/base.html' %}
 {% block content %}
+		
 <div class="parallax-container">
     <div class="parallax"><img src="/static/images/pup_basket.jpeg"></div>
 </div>
 <div class="section white">
+
+    {% include 'layout/user-feedback-message.html' %}
+    
     <div class="container">
         <h2 class="heading-text">Find your best friend!</h2>
         <p class="secondary-text">We have a great variety of dogs and the staff to find your perfect match.</p>
