--- a/templates/pages/requests.html
+++ b/templates/pages/requests.html
@@ -1,5 +1,5 @@
 
-{% extends 'base.html' %}
+{% extends 'layout/base.html' %}
 {% block content %}
 <div class="parallax-container">
     <div class="parallax"><img src="/static/images/pup_deck.jpg"></div>
