--- a/templates/pages/stores.html
+++ b/templates/pages/stores.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'layout/base.html' %}
 {% block content %}
 <div class="parallax-container">
     <div class="parallax"><img src="/static/images/pup_deck.jpg"></div>
