--- a/static/sass/base/_presets.scss
+++ b/static/sass/base/_presets.scss
@@ -5,10 +5,12 @@ html {
 }
 body {
     text-align: center;
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
 }
 a {
     text-decoration: none;
-    color: black;
+    color: $black-color;
 }
 .container {
     padding: 1rem;
