--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,11 +6,13 @@ html {
 
 body {
   text-align: center;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
 }
 
 a {
   text-decoration: none;
-  color: black;
+  color: #343334;
 }
 
 .container {
