--- a/templates/forms/stores/feedback-store.html
+++ b/templates/forms/stores/feedback-store.html
@@ -1,5 +1,5 @@
 <div class="form-box hide" id="{{ store._id }}" value="feedback">
-    <form action="{{ url_for('user_feedback', fb_receiver='store.id', usr_type='stores') }}" method="POST"
+    <form action="{{ url_for('user_feedback', usr_type='stores', receiver_id=store._id) }}" method="POST"
         class="col s12">
         <div class="row">
             <div class="col s6">
