--- a/templates/pages/stores.html
+++ b/templates/pages/stores.html
@@ -33,8 +33,14 @@
                         <p class="truncate">{{store.store_description}}</p>
                     </div>
                 </div>
-                {% if session['is_staff'] == 'is_staff' %}
+                {% if session['is_staff'] %}
                 <div class="col s12 m3 buttons-row">
+                    <a id="{{store._id}}" value="feedback"
+                        class="waves-effect waves-light btn card-action-button form-trigger">
+                        <i class="material-icons right card-action-button-icon">thumbs_up_down</i>
+                        <span>Feedback</span>
+                    </a>
+                {% if session['is_staff'] == 'is_staff' %}
                     <a id="{{store._id}}" value="edit"
                         class="waves-effect waves-light btn card-action-button form-trigger">
                         <i class="material-icons right card-action-button-icon">edit</i>
@@ -45,9 +51,11 @@
                         <i class="material-icons right card-action-button-icon">delete</i>
                         <span>Delete</span>
                     </a>
+                {% endif %}
                 </div>
                 {% endif %}
             </div>
+            {% include 'forms/stores/feedback-store.html' %}
             {% if session['is_staff'] == 'is_staff' %}
             {% include 'forms/stores/edit-store.html' %}
             {% include 'forms/stores/delete-store.html' %}
