--- a/templates/forms/services/feedback-service.html
+++ b/templates/forms/services/feedback-service.html
@@ -1,5 +1,5 @@
 <div class="form-box hide" id="{{ service._id }}" value="feedback">
-    <form action="{{ url_for('user_feedback', fb_receiver='service.id', usr_type='services') }}" method="POST"
+    <form action="{{ url_for('user_feedback', usr_type='services', receiver_id=service._id) }}" method="POST"
         class="col s12">
         <div class="row">
             <div class="col s6">
@@ -17,7 +17,7 @@
         </div>
         <div class="row">
             <button class="btn waves-effect waves-light" type="submit">Leave Feedback
-                <i class="material-icons right">check</i>
+                <i class="material-icons right">thumbs_up_down</i>
             </button>
         </div>
     </form>
