--- a/templates/pages/services.html
+++ b/templates/pages/services.html
@@ -24,7 +24,14 @@
                     <div class="card-image">
                         <i class="material-icons card-icon">supervisor_account</i>
                     </div>
+                    <div class="card-content-title">
+                        <span>{{service.fb_received.positive}}</span>
+                        <i class="material-icons card-action-button-icon">thumb_up</i>
+                        <span>{{service.fb_received.negative}}</span>
+                        <i class="material-icons card-action-button-icon">thumb_down</i>
+                    </div>
                 </div>
+                {% if session['is_staff'] %}
                 <div class="col s12 m6">
                     <div class="card-content">
                         <p class="card-content-title">Description</p>
@@ -34,6 +41,10 @@
                 </div>
                 {% if session['is_staff'] == 'is_staff' %}
                 <div class="col s12 m3 buttons-row">
+                    <a id="{{service._id}}" value="feedback" class="waves-effect waves-light btn card-action-button form-trigger">
+                        <i class="material-icons right card-action-button-icon">thumbs_up_down</i>
+                        <span>Feedback</span>
+                    </a>
                     <a id="{{service._id}}" value="edit"
                         class="waves-effect waves-light btn card-action-button form-trigger">
                         <i class="material-icons right card-action-button-icon">edit</i>
@@ -46,10 +57,12 @@
                     </a>
                 </div>
                 {% endif %}
+                {% endif %}
             </div>
+            {% include 'forms/services/feedback-service.html' %}
             {% if session['is_staff'] == 'is_staff' %}
-            {% include 'forms/services/edit-service.html' %}
-            {% include 'forms/services/delete-service.html' %}
+                {% include 'forms/services/edit-service.html' %}
+                {% include 'forms/services/delete-service.html' %}
             {% endif %}
             {% endfor %}
         </div>
