Added feedback button and display feedbacks received to stores page

--- a/templates/pages/stores.html
+++ b/templates/pages/stores.html
@@ -25,6 +25,12 @@
                     <div class="card-image">
                         <i class="material-icons card-icon">shopping_cart</i>
                     </div>
+                    <div class="card-content-title">
+                        <span>{{store.fb_received.positive}}</span>
+                        <i class="material-icons card-action-button-icon">thumb_up</i>
+                        <span>{{store.fb_received.negative}}</span>
+                        <i class="material-icons card-action-button-icon">thumb_down</i>
+                    </div>
                 </div>
                 <div class="col s12 m6">
                     <div class="card-content">
