Updated class names for individual cards

--- a/templates/pages/dogs.html
+++ b/templates/pages/dogs.html
@@ -19,7 +19,7 @@
         </div>
         <div class="row card-row-find">
             {% for dog in dogs %}
-            <div class="row card card-item-row">
+            <div class="row card single-card">
                 <div class="col s12 m3">
                     <p class="card-title">{{dog.dog_name}}</p>
                     <div class="card-image">
