Update class name for individual cards on staff dashboard

--- a/templates/dashboard/dash-staff.html
+++ b/templates/dashboard/dash-staff.html
@@ -1,5 +1,5 @@
 <div class="row card-row-find">
-    <div class="card row card-item-row">
+    <div class="card row single-card">
         <div class="col s12 m3">
             <p class="card-title">Users</p>
         </div>
@@ -16,7 +16,7 @@
             </a>
         </div>
     </div>
-    <div class="card row card-item-row">
+    <div class="card row single-card">
         <div class="col s12 m3">
             <p class="card-title">Adoption Requests</p>
         </div>
@@ -33,7 +33,7 @@
             </a>
         </div>
     </div>
-    <div class="card row card-item-row">
+    <div class="card row single-card">
         <div class="col s12 m3">
             <p class="card-title">Create new register</p>
         </div>
