--- a/templates/dashboard/dash-user.html
+++ b/templates/dashboard/dash-user.html
@@ -1,5 +1,5 @@
 <div class="row card-row-find">
-    <div class="card row card-item-row">
+    <div class="card row single-card">
         <div class="col s12 m3">
             <p class="card-title">{{user.first_name}} {{user.last_name}}</p>
             <div class="card-image">
