Updated card style on register scss file

--- a/static/css/components/_cards.scss
+++ b/static/css/components/_cards.scss
@@ -2,7 +2,8 @@
 
 .card {
     min-height: 100%;
-    padding: 2.5rem 0 0;
+    padding: 2rem 1rem;
+    margin: 0;
     .card-content {
         margin: 0;
         padding: 0;
