--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -11,6 +11,7 @@
 @import 'layout/footer';
 
 @import 'pages/login';
+@import 'pages/register';
 
 @import 'components/buttons';
 @import 'components/cards';
