Updated cards classes to match new css classes

--- a/templates/pages/stores.html
+++ b/templates/pages/stores.html
@@ -19,7 +19,7 @@
         </div>
         <div class="row card-row-find">
             {% for store in stores %}
-            <div class="card row card-item-row">
+            <div class="card row single-card">
                 <div class="col s12 m3">
                     <p class="card-title">{{store.store_name}}</p>
                     <div class="card-image">
