--- a/templates/pages/register.html
+++ b/templates/pages/register.html
@@ -17,7 +17,7 @@
                         <i class="material-icons card-icon">pets</i>
                         <a id="dogs" value="dogs" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse form-trigger"><i class="material-icons">add</i></a>
                     </div>
-                    <div class="card-content">
+                    <div class="card-content register-card-content">
                         <p>Add new dog to the database</p>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                         <i class="material-icons card-icon">person</i>     
                         <a id="users" value="users" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse form-trigger"><i class="material-icons">add</i></a>
                     </div>
-                    <div class="card-content">
+                    <div class="card-content register-card-content">
                         <p>Adopt, hire a service or find the nearest store!</p>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
                         <i class="material-icons card-icon">supervisor_account</i>  
                         <a id="services" value="services" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse form-trigger"><i class="material-icons">add</i></a>
                     </div>
-                    <div class="card-content">
+                    <div class="card-content register-card-content">
                         <p>Offer your service and find new customers!</p>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
                         <i class="material-icons card-icon">shopping_cart</i>
                         <a id="stores" value="stores" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse form-trigger"><i class="material-icons">add</i></a>
                     </div>
-                    <div class="card-content">
+                    <div class="card-content register-card-content">
                         <p>Expose your brand to new consumers!</p>
                     </div>
                 </div>
