--- a/templates/forms/dogs/edit-dog.html
+++ b/templates/forms/dogs/edit-dog.html
@@ -1,6 +1,11 @@
 <div class="form-box hide" id="{{dog._id}}" value='edit'>
     <form action="{{ url_for('update_entry', usr_type='dogs', usr_id=dog._id) }}" method="POST" class="col s12 edit-dog-form">
         <div class="row">
+            <h2 class="heading-text">Edit dog</h2>
+            <p class="secondary-text center">Here you can edit a dog's register</p>
+            <p class="center">Just fill in the fields you want to update and then press the "Update" button at the end of the form.</p>
+        </div>
+        <div class="row">
             <div class="input-field col s6">
                 <input name="dog_name" type="text" class="validate" data-length="30">
                 <label for="dog_name">Dog Name</label>
