Added header to services-edit and register forms

--- a/templates/forms/services/register-service.html
+++ b/templates/forms/services/register-service.html
@@ -1,6 +1,11 @@
 <div class="row form-box hide" id="services" value="services">
     <form action="{{ url_for('add_entry', usr_type='services') }}" method="POST" class="col s12">
         <div class="row">
+            <h2 class="heading-text">Register a Service</h2>
+            <p class="secondary-text center">Here you can register your service.</p>
+            <p class="center">Please fill in the form below and then press "Create Account".</p>
+        </div>
+        <div class="row">
             <div class="input-field col s6">
                 <input name="service_first_name" type="text" class="validate" data-length="40" required>
                 <label for="service_first_name">First Name</label>
