--- a/templates/forms/services/edit-service.html
+++ b/templates/forms/services/edit-service.html
@@ -1,6 +1,11 @@
 <div class="form-box hide" id="{{ service._id }}" value="edit">
     <form action="{{ url_for('update_entry', usr_type='services', usr_id=service._id) }}" method="POST" class="col s12">
         <div class="row">
+            <h2 class="heading-text">Edit service details</h2>
+            <p class="secondary-text center">Here you can update the information about your service.</p>
+            <p class="center">Just fill in the fields you need to update and then press the "update" button at the end of the form.</p>
+        </div>
+        <div class="row">
             <div class="input-field col s6">
                 <input name="service_first_name" type="text" class="validate" data-length="40">
                 <label for="service_first_name">First Name</label>
