--- a/templates/forms/stores/edit-store.html
+++ b/templates/forms/stores/edit-store.html
@@ -1,6 +1,11 @@
 <div class="form-box hide" id="{{ store._id }}" value="edit">
     <form action="{{ url_for('update_entry', usr_type='stores', usr_id=store._id) }}" method="POST" class="col s12">
         <div class="row">
+            <h2 class="heading-text">Edit store details</h2>
+            <p class="secondary-text center">Here you can update the information about your store.</p>
+            <p class="center">Just fill in the fields you need to update and then press the "update" button at the end of the form.</p>
+        </div>
+        <div class="row">
             <div class="input-field col s6">
                 <input name="store_name" type="text" class="validate" data-length="40">
                 <label for="store_name">Store Name</label>
